// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroupField renders with just labels 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  min-width: 0;
}

.emotion-1 {
  padding-left: 0px;
  padding-right: 0px;
}

.emotion-2 {
  max-width: 320px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.emotion-3 {
  color: rgba(100,100,100,1);
  display: inline-block;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  margin-bottom: 4px;
}

.emotion-4 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.emotion-5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 100%;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 16px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: 16px;
  outline: 0px solid transparent;
  background-color: currentColor;
  border-color: currentColor;
  border-style: solid;
  border-width: 1px;
  color: rgba(3,105,161,1);
  -webkit-transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms,margin 200ms;
  transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms,margin 200ms;
  -webkit-background-position: center;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-background-size: 100% 100%;
  background-size: 100% 100%;
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='4'/%3e%3c/svg%3e");
  margin-right: 8px;
  margin-top: 2px;
}

.emotion-6 {
  color: rgba(53,53,53,1);
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 100%;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 16px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: 16px;
  outline: 0px solid transparent;
  background-color: rgba(254,254,254,1);
  border-color: rgba(221,220,220,1);
  border-style: solid;
  border-width: 1px;
  color: rgba(3,105,161,1);
  -webkit-transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms,margin 200ms;
  transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms,margin 200ms;
  cursor: pointer;
  margin-right: 8px;
  margin-top: 2px;
}

.emotion-10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: auto;
  padding-left: 0px;
  padding-right: 0px;
}

<body>
  <div>
    <div
      data-overlay-container="true"
    >
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <label
              class="emotion-3"
              data-testid="favoriteCheese_label"
              id="react-aria-2"
            >
              Favorite cheese
            </label>
            <div
              aria-labelledby="react-aria-2"
              aria-orientation="vertical"
              id="react-aria-1"
              role="radiogroup"
            >
              <label
                class="emotion-4"
              >
                <input
                  aria-labelledby="radio-group-1-a-label"
                  checked=""
                  class="emotion-5"
                  data-testid="favoriteCheese_a"
                  name="react-aria-3"
                  tabindex="0"
                  type="radio"
                  value="a"
                />
                <div>
                  <div
                    class="emotion-6"
                    id="radio-group-1-a-label"
                  >
                    Asiago
                  </div>
                </div>
              </label>
              <label
                class="emotion-4"
              >
                <input
                  aria-labelledby="radio-group-1-b-label"
                  class="emotion-8"
                  data-testid="favoriteCheese_b"
                  name="react-aria-3"
                  tabindex="0"
                  type="radio"
                  value="b"
                />
                <div>
                  <div
                    class="emotion-6"
                    id="radio-group-1-b-label"
                  >
                    Burratta
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="emotion-10"
        >
          <div
            style="height: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RadioGroupField renders with just labels and description 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  min-width: 0;
}

.emotion-1 {
  padding-left: 0px;
  padding-right: 0px;
}

.emotion-2 {
  max-width: 344px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.emotion-3 {
  color: rgba(100,100,100,1);
  display: inline-block;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  margin-bottom: 4px;
}

.emotion-4 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.emotion-5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 100%;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 16px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: 16px;
  outline: 0px solid transparent;
  background-color: currentColor;
  border-color: currentColor;
  border-style: solid;
  border-width: 1px;
  color: rgba(3,105,161,1);
  -webkit-transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms,margin 200ms;
  transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms,margin 200ms;
  -webkit-background-position: center;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-background-size: 100% 100%;
  background-size: 100% 100%;
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='4'/%3e%3c/svg%3e");
  margin-right: 8px;
  margin-top: 2px;
}

.emotion-6 {
  color: rgba(53,53,53,1);
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 100%;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 16px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: 16px;
  outline: 0px solid transparent;
  background-color: rgba(254,254,254,1);
  border-color: rgba(221,220,220,1);
  border-style: solid;
  border-width: 1px;
  color: rgba(3,105,161,1);
  -webkit-transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms,margin 200ms;
  transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms,margin 200ms;
  cursor: pointer;
  margin-right: 8px;
  margin-top: 2px;
}

.emotion-10 {
  color: rgba(100,100,100,1);
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.emotion-11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: auto;
  padding-left: 0px;
  padding-right: 0px;
}

<body>
  <div>
    <div
      data-overlay-container="true"
    >
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <label
              class="emotion-3"
              data-testid="favoriteCheese_label"
              id="react-aria-5"
            >
              Favorite cheese
            </label>
            <div
              aria-labelledby="react-aria-5"
              aria-orientation="vertical"
              id="react-aria-4"
              role="radiogroup"
            >
              <label
                class="emotion-4"
              >
                <input
                  aria-labelledby="radio-group-2-a-label"
                  checked=""
                  class="emotion-5"
                  data-testid="favoriteCheese_a"
                  name="react-aria-6"
                  tabindex="0"
                  type="radio"
                  value="a"
                />
                <div>
                  <div
                    class="emotion-6"
                    id="radio-group-2-a-label"
                  >
                    Asiago
                  </div>
                </div>
              </label>
              <label
                class="emotion-4"
              >
                <input
                  aria-labelledby="radio-group-2-b-label"
                  class="emotion-8"
                  data-testid="favoriteCheese_b"
                  name="react-aria-6"
                  tabindex="0"
                  type="radio"
                  value="b"
                />
                <div>
                  <div
                    aria-describedby="radio-group-2-b-description"
                    class="emotion-6"
                    id="radio-group-2-b-label"
                  >
                    Burratta
                  </div>
                  <div
                    class="emotion-10"
                    id="radio-group-2-b-description"
                  >
                    Burrata is an Italian cow milk cheese made from mozzarella and cream.
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="emotion-11"
        >
          <div
            style="height: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
